# agents-crewai-demo

./: README.md  pyproject.toml
knowledge/: 企业解决方案框架.md  初创科技企业.md  小企业互动.md
src/: report.md
src/my_project_agents/: crew.py  main.py
src/my_project_agents/config/: agents.yaml  tasks.yaml
src/my_project_agents/tools/: custom_tool.py
