[project]
name = "my_project_agents"
version = "0.1.0"
description = "my_project_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.2"
]

[project.scripts]
my_project_agents = "my_project_agents.main:run"
run_crew = "my_project_agents.main:run"
train = "my_project_agents.main:train"
replay = "my_project_agents.main:replay"
test = "my_project_agents.main:test"
run_with_trigger = "my_project_agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
